--- a/app/src/main/res/layout/spinner_design.xml
+++ b/app/src/main/res/layout/spinner_design.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="18dp"
-    android:padding="2dp"
-    android:textColor="@android:color/text_color_primary"
+    android:padding="10dp"
+    android:textColor="@color/textColorPrimary"
     />
