added kidney function test module.

--- a/app/src/main/res/layout/activity_2.xml
+++ b/app/src/main/res/layout/activity_2.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:padding="10dp"
     android:id="@+id/activity2_relout"
-    android:background="@drawable/rounded_corner_activity">
+    >
 
     <TextView
         android:id="@+id/basic_test_text"
@@ -124,6 +124,66 @@
         android:divider="@android:color/transparent"
         android:dividerHeight="10.0sp"
         android:layout_marginRight="20dp"/>
+    <TextView
+        android:id="@+id/kidneytest_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/listview_CBC"
+        android:padding="5dp"
+        android:text="Kidney function test"
+        android:textColor="@color/textColorPrimary"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:fontFamily="sans-serif-condensed" />
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/grid_kidneytest"
+        android:layout_below="@+id/kidneytest_text"
+        android:padding="5dp">
+
+        <Spinner
+            android:id="@+id/spinner_kidneytest"
+            style="@android:style/Widget.Material.Spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="0" />
+
+        <EditText
+            android:id="@+id/enter_kidneytest"
+            style="@style/Base.Widget.MaterialComponents.TextInputEditText"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_marginLeft="10dp"
+            android:inputType=""
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+        <Button
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="3"
+            android:onClick="onclick_kidney_test"
+            android:text="Ok"
+            android:textSize="14sp" />
+    </GridLayout>
+
+    <ListView
+        android:id="@+id/listview_kidneytest"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/grid_kidneytest"
+        android:layout_marginLeft="20dp"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10.0sp"
+        android:layout_marginRight="20dp"/>
+
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_back_lab"
