--- a/app/src/main/res/layout/my_list.xml
+++ b/app/src/main/res/layout/my_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/basic_lab_lhs"
+        android:id="@+id/lab_lhs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_row="0"
@@ -13,7 +13,7 @@
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/basic_lab_rhs"
+        android:id="@+id/lab_rhs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_row="0"
