--- a/app/src/main/res/layout/spinner_design.xml
+++ b/app/src/main/res/layout/spinner_design.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="175dp"
-    android:layout_weight="1"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="18dp"
     android:padding="10dp"
