--- a/app/src/main/res/layout/activity_medication_results.xml
+++ b/app/src/main/res/layout/activity_medication_results.xml
@@ -5,29 +5,12 @@
     android:layout_height="match_parent"
     android:padding="5dp"
     >
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:id="@+id/gridlayout_reults">
-   <TextView
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_column="0"
-       android:layout_row="0"
-       android:id="@+id/textView"/>
-
-
     <TextView
-        android:id="@+id/textView2"
-        android:layout_column="1"
-        android:layout_row="0"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp" />
-    </GridLayout>
+        android:id="@+id/tabletName"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"/>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
